Closed
Bug 738022
Opened 13 years ago
Closed 13 years ago
gonk gps - test GpsInterface size before using
Categories
(Core :: DOM: Geolocation, defect)
Tracking
()
RESOLVED
FIXED
mozilla14
People
(Reporter: dougt, Assigned: dougt)
Details
Attachments
(1 file)
2.24 KB,
patch
|
jdm
:
review+
|
Details | Diff | Splinter Review |
Changes:
Tests the resulting interface structure's size with what was compiled. I am seeing mismatches on the S2 which cause crashes.
Sets mStarted when the provide has started up.
Moves the code that dlopen's from the provider's constructor to Startup().
Assignee | ||
Comment 1•13 years ago
|
||
Attachment #608076 -
Flags: review?(josh)
Comment 2•13 years ago
|
||
Comment on attachment 608076 [details] [diff] [review]
patch v.1
Review of attachment 608076 [details] [diff] [review]:
-----------------------------------------------------------------
::: dom/system/gonk/GonkGPSGeolocationProvider.cpp
@@ +187,5 @@
> {
> if (!mStarted)
> return NS_OK;
>
> + NS_ENSURE_TRUE(mGpsInterface, NS_OK);
Just add this check to the one above.
Attachment #608076 -
Flags: review?(josh) → review+
Comment 3•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla14
You need to log in
before you can comment on or make changes to this bug.
Description
•