Bug 738022 - gonk gps - test GpsInterface size before using. r=jdm